--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -112,11 +112,42 @@
                         </li>
                         <li>
                             <a href="{{ path('search') }}" style="color:#337ab7">
-                                {{ 'nav.search'|trans }}
+                                <span class="glyphicon glyphicon-search" aria-hidden="true"></span> {% trans
+                                %}nav.search{% endtrans %}
                             </a>
                         </li>
                     </ul>
+                    <!--| Login/Logout Start-needed |-->
+                    <ul class="nav navbar-nav navbar-right">
+                        <!--| Login/Logout End-needed |-->
+                        <!--|| BEGIN ADMIN LINK ||-->
+                        {% if is_granted('ROLE_ADMIN') -%}
+                        <li class="dropdown">
 
+                        <li class="dropdown">
+                            <a href="/admin" style="color:#15609f"><span class="glyphicon glyphicon-king" aria-hidden="true"></span>
+                                {{ 'admin.panel'|trans }}</a>
+                        </li>
+                        </li>
+                        {% endif %}
+                        <!--|| END ADMIN LINK ||-->
+                        <!--| Login/Logout Start |-->
+                        <li class="dropdown pull-right"><a href="{{ path('fos_user_registration_register') }}" style="color:#15609f"><span
+                                    class="glyphicon glyphicon-knight" aria-hidden="true"></span> {% trans
+                                %}login.register{% endtrans %}</a></li>
+
+                        {% if app.user %}
+                        <li class="dropdown pull-right"><a href="{{ path('fos_user_security_logout') }}" style="color:#15609f"><span
+                                    class="glyphicon glyphicon-log-out" aria-hidden="true"></span> {% trans
+                                %}login.logout{% endtrans %}</a></li>
+                        {% else %}
+                        <li class="dropdown pull-right"><a href="{{ path('fos_user_security_login') }}" style="color:#15609f"><span
+                                    class="glyphicon glyphicon-log-in" aria-hidden="true"></span> {% trans
+                                %}login.login{% endtrans %}</a></li>
+                        {% endif %}
+
+                    </ul>
+                    <!--| Login/Logout End |-->
                 </div>
             </div>
         </nav>
